Translation es done. Router base name changed to PUBLIC URL

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -366,7 +366,7 @@
       }
     }
   },
-  "join_us": {
+  "join_now": {
     "title": "¿Es válido tu perfil de Facebook para nuestro programa de alquiler?",
     "info": "Para saber si es válido para nuestro programa de alquiler, completa este sencillo cuestionario.",
     "button": {
