Change language functionality added

--- a/client/src/locales/es/translation.json
+++ b/client/src/locales/es/translation.json
@@ -1196,6 +1196,7 @@
     },
     "title": "Pagos",
     "concept": "Concepto",
+    "name": "Name",
     "user": "Usuario",
     "payment_method": "Método de pago",
     "payment_date": "Fecha de pago",
